update CLI commands based on latest UniFi changes